fixed page spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5607,10 +5607,6 @@ button.close {
 .panel-body:after,
 .modal-footer:before,
 .modal-footer:after,
-.page.home:before,
-.page.home:after,
-.page.notfound:before,
-.page.notfound:after,
 .page.locations .row:before,
 .page.locations .row:after,
 .page.model .map .controls:before,
@@ -5632,8 +5628,6 @@ button.close {
 .pager:after,
 .panel-body:after,
 .modal-footer:after,
-.page.home:after,
-.page.notfound:after,
 .page.locations .row:after,
 .page.model .map .controls:after {
   clear: both;
@@ -7294,10 +7288,6 @@ nav.navbar {
 nav.navbar a {
   white-space: nowrap;
 }
-.page.home {
-  margin-left: -15px;
-  margin-right: -15px;
-}
 .page.home .main {
   position: relative;
   min-height: 1px;
@@ -7484,10 +7474,6 @@ fieldset[disabled] .page.home .main .build.active {
     float: left;
     width: 33.33333333333333%;
   }
-}
-.page.notfound {
-  margin-left: -15px;
-  margin-right: -15px;
 }
 .page.notfound .main {
   position: relative;
